--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,6 @@
 [submodule "order_service"]
 	path = order_service
 	url = https://github.com/IASSCMS/Order-Tracking-BlockTrack.git
+[submodule "supplier_ranking_service"]
+	path = supplier_ranking_service
+	url = https://github.com/IASSCMS/supplier-ranking-service.git
